fix: link overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,9 @@
       scroll-margin-top: 5rem;
     }
   }
+  .prose a {
+    @apply break-all;
+  }
 }
 
 @layer utilities {
